namespace Data.AnimationTags
{
    public struct AnimationTags
    {
        public const string ZOOM_IN_AIM = "Zoom In";
        public const string ZOOM_OUT_AIM = "Zoom Out";

        public const string SHOOT_TRIGGER = "Shoot";
        public const string SHOOT_TRIGGER_ONE = "Shoot One";
        public const string SHOOT_TRIGGER_TWO = "Shoot Two";
        public const string SHOOT_TRIGGER_THREE = "Shoot Three";

        public const string RELOAD_TRIGGER = "Reload";
        public const string SWITCH_MODE_TRIGGER = "Switch Mode";

        public const string HIDE_TRIGGER = "Hide";

        public const string WALK_PARRAMITER = "Walk";
        public const string RUN_PARRAMITER = "Run";
        public const string JUMP_PARRAMITER = "Jump";
    }

}