namespace GameData.AnimationTags
{
    public static class AnimationParams
    {
        public const string IDLE = "Idle";
        
        public const string ZOOM_IN_AIM = "Zoom In";
        public const string ZOOM_OUT_AIM = "Zoom Out";

        public const string SHOOT_TRIGGER = "Shoot";
        public const string PERFORM_ATTACK = "On Attack";
        public const string ATTACK_ID = "Attack Action";

        public const string IS_ITEM_EQUIPPED = "Is Equiped";
        public const string IS_ITEM_READY = "Is Ready";
        public const string ITEM_PICKUP = "On Pick Up";
        public const string ITEM_EQUIPPED = "On Equip";
        public const string ITEM_HIDED = "On Hide";

        public const string RELOAD_TRIGGER = "Reload";
        public const string SWITCH_MODE_TRIGGER = "Switch Mode";

        public const string HIDE = "Hide";
        public const string DAMAGED = "Damaged";

        public const string WALK = "Walk";
        public const string RUN = "Run";
        public const string JUMP = "Jump";
    }
}